crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_control_flow__break_statement.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_control_flow.rs
expression: program
---
items:
  - Statement:
      Break:
        start: 0
        end: 6
        file: "<input>"
