crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_control_flow__for_loop.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_control_flow.rs
expression: program
---
items:
  - Statement:
      ForIn:
        variable:
          name: i
          span:
            start: 4
            end: 5
        iterable:
          ArrayLiteral:
            elements:
              - Literal:
                  - Number: 0
                  - start: 10
                    end: 11
              - Literal:
                  - Number: 1
                  - start: 13
                    end: 14
              - Literal:
                  - Number: 2
                  - start: 16
                    end: 17
              - Literal:
                  - Number: 3
                  - start: 19
                    end: 20
              - Literal:
                  - Number: 4
                  - start: 22
                    end: 23
            span:
              start: 9
              end: 24
        body:
          statements:
            - Expr:
                expr:
                  Identifier:
                    name: x
                    span:
                      start: 27
                      end: 28
                span:
                  start: 27
                  end: 29
          tail_expr: ~
          span:
            start: 25
            end: 31
        span:
          start: 0
          end: 31
