crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_control_flow__for_loop_parens.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_control_flow.rs
expression: program
---
items:
  - Statement:
      ForIn:
        variable:
          name: i
          span:
            start: 5
            end: 6
            file: "<input>"
        iterable:
          ArrayLiteral:
            elements:
              - Literal:
                  - Number: 0
                  - start: 11
                    end: 12
                    file: "<input>"
              - Literal:
                  - Number: 1
                  - start: 14
                    end: 15
                    file: "<input>"
              - Literal:
                  - Number: 2
                  - start: 17
                    end: 18
                    file: "<input>"
              - Literal:
                  - Number: 3
                  - start: 20
                    end: 21
                    file: "<input>"
              - Literal:
                  - Number: 4
                  - start: 23
                    end: 24
                    file: "<input>"
            span:
              start: 10
              end: 25
              file: "<input>"
        body:
          statements:
            - Expr:
                expr:
                  Identifier:
                    name: x
                    span:
                      start: 29
                      end: 30
                      file: "<input>"
                span:
                  start: 29
                  end: 31
                  file: "<input>"
          tail_expr: ~
          span:
            start: 27
            end: 33
            file: "<input>"
        span:
          start: 0
          end: 33
          file: "<input>"
