crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_control_flow__if_else_statement.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_control_flow.rs
expression: program
---
items:
  - Statement:
      If:
        cond:
          Literal:
            - Bool: true
            - start: 4
              end: 8
              file: "<input>"
        then_block:
          statements:
            - Expr:
                expr:
                  Identifier:
                    name: x
                    span:
                      start: 12
                      end: 13
                      file: "<input>"
                span:
                  start: 12
                  end: 14
                  file: "<input>"
          tail_expr: ~
          span:
            start: 10
            end: 16
            file: "<input>"
        else_block:
          statements:
            - Expr:
                expr:
                  Identifier:
                    name: y
                    span:
                      start: 24
                      end: 25
                      file: "<input>"
                span:
                  start: 24
                  end: 26
                  file: "<input>"
          tail_expr: ~
          span:
            start: 22
            end: 28
            file: "<input>"
        span:
          start: 0
          end: 28
          file: "<input>"
