crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_control_flow__if_else_statement_no_parens.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_control_flow.rs
expression: program
---
items:
  - Statement:
      If:
        cond:
          Literal:
            - Bool: true
            - start: 3
              end: 7
              file: "<input>"
        then_block:
          statements:
            - Expr:
                expr:
                  Identifier:
                    name: x
                    span:
                      start: 10
                      end: 11
                      file: "<input>"
                span:
                  start: 10
                  end: 12
                  file: "<input>"
          tail_expr: ~
          span:
            start: 8
            end: 14
            file: "<input>"
        else_block:
          statements:
            - Expr:
                expr:
                  Identifier:
                    name: y
                    span:
                      start: 22
                      end: 23
                      file: "<input>"
                span:
                  start: 22
                  end: 24
                  file: "<input>"
          tail_expr: ~
          span:
            start: 20
            end: 26
            file: "<input>"
        span:
          start: 0
          end: 26
          file: "<input>"
