crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_control_flow__match_expr_commas.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_control_flow.rs
expression: program
---
items:
  - Statement:
      VarDecl:
        mutable: false
        uses_deprecated_var: false
        name:
          name: r
          span:
            start: 4
            end: 5
            file: "<input>"
        type_ref: ~
        init:
          Match:
            scrutinee:
              Identifier:
                name: x
                span:
                  start: 14
                  end: 15
                  file: "<input>"
            arms:
              - pattern:
                  Literal:
                    - Number: 1
                    - start: 18
                      end: 19
                      file: "<input>"
                guard: ~
                body:
                  Literal:
                    - String: one
                    - start: 23
                      end: 28
                      file: "<input>"
                span:
                  start: 18
                  end: 28
                  file: "<input>"
              - pattern:
                  Literal:
                    - Number: 2
                    - start: 30
                      end: 31
                      file: "<input>"
                guard: ~
                body:
                  Literal:
                    - String: two
                    - start: 35
                      end: 40
                      file: "<input>"
                span:
                  start: 30
                  end: 40
                  file: "<input>"
              - pattern:
                  Wildcard:
                    start: 42
                    end: 43
                    file: "<input>"
                guard: ~
                body:
                  Literal:
                    - String: other
                    - start: 47
                      end: 54
                      file: "<input>"
                span:
                  start: 42
                  end: 54
                  file: "<input>"
            span:
              start: 8
              end: 56
              file: "<input>"
        span:
          start: 0
          end: 57
          file: "<input>"
