crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_control_flow__parse_block_in_if.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_control_flow.rs
expression: program
---
items:
  - Statement:
      If:
        cond:
          Literal:
            - Bool: true
            - start: 3
              end: 7
        then_block:
          statements:
            - VarDecl:
                mutable: false
                uses_deprecated_var: false
                name:
                  name: x
                  span:
                    start: 14
                    end: 15
                type_ref: ~
                init:
                  Literal:
                    - Number: 1
                    - start: 18
                      end: 19
                span:
                  start: 10
                  end: 20
            - VarDecl:
                mutable: false
                uses_deprecated_var: false
                name:
                  name: y
                  span:
                    start: 25
                    end: 26
                type_ref: ~
                init:
                  Literal:
                    - Number: 2
                    - start: 29
                      end: 30
                span:
                  start: 21
                  end: 31
          tail_expr: ~
          span:
            start: 8
            end: 33
        else_block: ~
        span:
          start: 0
          end: 33
