crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_control_flow__parse_nested_blocks.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_control_flow.rs
expression: program
---
items:
  - Statement:
      If:
        cond:
          Literal:
            - Bool: true
            - start: 3
              end: 7
              file: "<input>"
        then_block:
          statements:
            - If:
                cond:
                  Literal:
                    - Bool: false
                    - start: 13
                      end: 18
                      file: "<input>"
                then_block:
                  statements:
                    - VarDecl:
                        mutable: false
                        uses_deprecated_var: false
                        name:
                          name: x
                          span:
                            start: 25
                            end: 26
                            file: "<input>"
                        type_ref: ~
                        init:
                          Literal:
                            - Number: 1
                            - start: 29
                              end: 30
                              file: "<input>"
                        span:
                          start: 21
                          end: 31
                          file: "<input>"
                  tail_expr: ~
                  span:
                    start: 19
                    end: 33
                    file: "<input>"
                else_block: ~
                span:
                  start: 10
                  end: 33
                  file: "<input>"
          tail_expr: ~
          span:
            start: 8
            end: 35
            file: "<input>"
        else_block: ~
        span:
          start: 0
          end: 35
          file: "<input>"
